examples/test/testpolicy8004.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8004
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key22: value25
      key1: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value43
          key3: value47
          key44: value41
      podSelector:
        matchLabels:
          key11: value26
          key42: value17
